# audio-lib

./: CMakeLists.txt
src/audio/: AudioSource.cppm  PlaySoundSourceRequest.cppm  SoundDescriptor.cppm  SoundPlayback.cppm
src/audio/services/: AudioSystemsService.cpp  AudioSystemsService.cppm  SoLoudSystemService.cppm
src/audio/systems/: AudioSystems.cpp  AudioSystems.cppm  SoLoudSystem.cpp  SoLoudSystem.cppm
tests/: CMakeLists.txt  SoLoudSystemTests.cpp
